--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vue": "^2.5.17"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.1.0",
+    "@ky-is/vue-cli-plugin-tailwind": "^1.5.0",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.5",
     "@vue/cli-plugin-pwa": "^3.1.2",
@@ -21,7 +23,9 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.9.0",
+    "postcss-preset-env": "^6.3.0",
     "sass-loader": "^7.0.1",
+    "tailwindcss": "^0.7.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
