pwa manifest and logo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "nrgVue",
-  "short_name": "nrgVue",
+  "name": "EnergyMixRadio",
+  "short_name": "EnergyMixRadio",
   "icons": [
     {
-      "src": "./img/icons/android-chrome-192x192.png",
+      "src": "./img/icons/nrg-logo-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./img/icons/android-chrome-512x512.png",
+      "src": "./img/icons/nrg-logo-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
